!!!!!!!!!!!!!!!NOTE - NOTE!!!!!!!!!!!!!!!!!!!!!
Remember to increase the TIGHTDB_JNI_VERSION in com_tightdb_internal_Util.cpp and com.tightdb.internal.Util.java
      when the JNI interface is changed.
!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
12-December-2013:
================
! BREAKING CHANGE: SubTableSchema renamed to SubtableSchema.
! BREAKING CHANGE: All methods with *subTable* renamed to *subtable*.

25-November-2013:
================
+ Query objects are now validated when executed to avoid breaking core.

19-November-2013:
================
+ Added sort() to views in typed interface on bool, date and int columns.
+ Check for returning -1 on 32-bit machines, when e.g. column name not found.

14-November-2013:
================
+ SQLite examples now runs on JDK 7.

11-November-2013:
================
+ table.getSortedView now uses native method - making it faster.

07-November-2013:
================
+ Avoiding more namespace issues when defining typed tables.
+ Added com.tightdb.IllegalMixedTypeException as a runtime exception. Is thrown when getting a wrong type from a Mixed object.

06-November-2013:
================
+ Added getSourceRowIndex() method on TableView.

25-October-2013:
================
+ Added lookup(String val) method to typed table.

25-October-2013:
================
+ Added addEmptyRow() method to typed table.
+ Added findFrom() method to typed query.

15-October-2013:
================
+ Table.get*() with negative column index no longer breaks core, but throws exception instead.

13-October-2013:
================
+ dist-deb target in build.sh, updating debian/changelog.in.

09-October-2013:
===============
+ Added support for Async durability in SharedGroup.
+ Added ShareGroup.reserve(bytes)

08-October-2013:
================
+ Added where() on TableOrView interface.
+ Added where() in TableView.
+ Added queries on views in the typed interface.

30-September-2013:
==================